Added campaignList logic
